@@ -12,35 +12,50 @@ import com.carrotsearch.randomizedtesting.annotations.Listeners;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.elasticsearch.TransportVersion;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.compute.operator.PlanTimeProfile;
 import org.elasticsearch.core.PathUtils;
 import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.core.Tuple;
+import org.elasticsearch.index.IndexMode;
 import org.elasticsearch.logging.LogManager;
 import org.elasticsearch.logging.Logger;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.junit.listeners.ReproduceInfoPrinter;
-import org.elasticsearch.xpack.esql.CsvTests;
+import org.elasticsearch.xpack.esql.CsvTestsDataLoader;
 import org.elasticsearch.xpack.esql.EsqlTestUtils;
+import org.elasticsearch.xpack.esql.LoadMapping;
+import org.elasticsearch.xpack.esql.TestAnalyzer;
 import org.elasticsearch.xpack.esql.analysis.Analyzer;
-import org.elasticsearch.xpack.esql.analysis.AnalyzerContext;
-import org.elasticsearch.xpack.esql.analysis.EnrichResolution;
+import org.elasticsearch.xpack.esql.analysis.PreAnalyzer;
+import org.elasticsearch.xpack.esql.approximation.ApproximationPlan;
+import org.elasticsearch.xpack.esql.core.expression.FieldAttribute;
 import org.elasticsearch.xpack.esql.core.expression.FoldContext;
+import org.elasticsearch.xpack.esql.core.expression.NamedExpression;
 import org.elasticsearch.xpack.esql.core.tree.Node;
-import org.elasticsearch.xpack.esql.expression.function.EsqlFunctionRegistry;
-import org.elasticsearch.xpack.esql.inference.InferenceResolution;
-import org.elasticsearch.xpack.esql.parser.EsqlParser;
+import org.elasticsearch.xpack.esql.core.tree.Source;
+import org.elasticsearch.xpack.esql.core.type.DataType;
+import org.elasticsearch.xpack.esql.core.type.EsField;
+import org.elasticsearch.xpack.esql.core.type.InvalidMappedField;
+import org.elasticsearch.xpack.esql.enrich.LookupFromIndexService;
+import org.elasticsearch.xpack.esql.enrich.MatchConfig;
+import org.elasticsearch.xpack.esql.index.EsIndex;
+import org.elasticsearch.xpack.esql.index.IndexResolution;
 import org.elasticsearch.xpack.esql.plan.EsqlStatement;
+import org.elasticsearch.xpack.esql.plan.IndexPattern;
 import org.elasticsearch.xpack.esql.plan.QueryPlan;
 import org.elasticsearch.xpack.esql.plan.logical.LogicalPlan;
 import org.elasticsearch.xpack.esql.plan.physical.ExchangeExec;
 import org.elasticsearch.xpack.esql.plan.physical.ExchangeSinkExec;
+import org.elasticsearch.xpack.esql.plan.physical.LookupJoinExec;
 import org.elasticsearch.xpack.esql.plan.physical.PhysicalPlan;
 import org.elasticsearch.xpack.esql.planner.PlannerSettings;
 import org.elasticsearch.xpack.esql.planner.PlannerUtils;
+import org.elasticsearch.xpack.esql.planner.mapper.LocalMapper;
 import org.elasticsearch.xpack.esql.planner.mapper.Mapper;
 import org.elasticsearch.xpack.esql.plugin.ComputeService;
 import org.elasticsearch.xpack.esql.plugin.EsqlFlags;
+import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 import org.elasticsearch.xpack.esql.plugin.ReductionPlan;
 import org.elasticsearch.xpack.esql.session.Configuration;
 import org.elasticsearch.xpack.esql.session.Versioned;
@@ -59,17 +74,23 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.function.BiFunction;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.xpack.esql.EsqlTestUtils.TEST_VERIFIER;
+import static java.util.stream.Collectors.toSet;
+import static org.elasticsearch.xpack.esql.CsvTestsDataLoader.CSV_DATASET;
+import static org.elasticsearch.xpack.esql.EsqlTestUtils.TEST_PARSER;
+import static org.elasticsearch.xpack.esql.EsqlTestUtils.analyzer;
 import static org.elasticsearch.xpack.esql.EsqlTestUtils.randomMinimumVersion;
 import static org.elasticsearch.xpack.esql.EsqlTestUtils.withDefaultLimitWarning;
-import static org.elasticsearch.xpack.esql.analysis.AnalyzerTestUtils.defaultLookupResolution;
 import static org.elasticsearch.xpack.esql.plan.QuerySettings.UNMAPPED_FIELDS;
 
 /** See GoldenTestsReadme.md for more information about these tests. */
@@ -77,6 +98,19 @@ import static org.elasticsearch.xpack.esql.plan.QuerySettings.UNMAPPED_FIELDS;
 @LuceneTestCase.SuppressFileSystems("ExtrasFS") // ExtrasFS can create extraneous files in the output directory.
 public abstract class GoldenTestCase extends ESTestCase {
     private static final Logger logger = LogManager.getLogger(GoldenTestCase.class);
+
+    /**
+     * RandomizedRunner appends {@code {seed=[...]}} to {@link #getTestName()} for {@code -Dtests.iters} / {@code @Repeat} (See #144763).
+     */
+    private static final Pattern RANDOMIZED_RUNNER_SEED_SUFFIX_AT_END = Pattern.compile("(?:\\s+\\{seed=\\[[^\\]]+\\]\\})+$");
+
+    /**
+     * Fixed sample probability that is used for all query approximation plans.
+     * Normally it would be determined from subplan execution, but those are
+     * not supported in the golden tests.
+     */
+    private static final double SAMPLE_PROBABILITY = 0.0123456789;
+
     private final Path baseFile;
 
     public GoldenTestCase() {
@@ -105,7 +139,7 @@ public abstract class GoldenTestCase extends ESTestCase {
         TransportVersion transportVersion,
         String... nestedPath
     ) {
-        String testName = extractTestName();
+        String testName = RANDOMIZED_RUNNER_SEED_SUFFIX_AT_END.matcher(getTestName()).replaceFirst("");
         new Test(baseFile, testName, nestedPath, esqlQuery, stages, searchStats, transportVersion).doTest();
     }
 
@@ -177,6 +211,15 @@ public abstract class GoldenTestCase extends ESTestCase {
         public void run() {
             runGoldenTest(esqlQuery, stages, searchStats, transportVersion, nestedPath);
         }
+
+        public Optional<Throwable> tryRun() {
+            try {
+                run();
+                return Optional.empty();
+            } catch (Throwable e) {
+                return Optional.of(e);
+            }
+        }
     }
 
     private record Test(
@@ -202,7 +245,7 @@ public abstract class GoldenTestCase extends ESTestCase {
         }
 
         private List<Tuple<Stage, TestResult>> doTests() throws IOException {
-            EsqlStatement statement = EsqlParser.INSTANCE.createStatement(esqlQuery);
+            EsqlStatement statement = TEST_PARSER.createStatement(esqlQuery);
             LogicalPlan parsedPlan = statement.plan();
             String[] queryPathParts = new String[nestedPath.length + 2];
             queryPathParts[0] = testName;
@@ -211,19 +254,16 @@ public abstract class GoldenTestCase extends ESTestCase {
             Path queryPath = PathUtils.get(basePath.toString(), queryPathParts);
             Files.createDirectories(queryPath.getParent());
             Files.writeString(queryPath, esqlQuery);
-            var analyzer = new Analyzer(
-                new AnalyzerContext(
-                    EsqlTestUtils.TEST_CFG,
-                    new EsqlFunctionRegistry(),
-                    CsvTests.loadIndexResolution(CsvTests.testDatasets(parsedPlan)),
-                    defaultLookupResolution(),
-                    new EnrichResolution(),
-                    InferenceResolution.EMPTY,
-                    transportVersion,
-                    statement.setting(UNMAPPED_FIELDS)
-                ),
-                TEST_VERIFIER
+            TestAnalyzer testAnalyzer = analyzer().addLanguagesLookup()
+                .addTestLookup()
+                .addAnalysisTestsEnrichResolution()
+                .addAnalysisTestsInferenceResolution()
+                .minimumTransportVersion(transportVersion)
+                .unmappedResolution(statement.setting(UNMAPPED_FIELDS));
+            loadIndexResolution(testDatasets(parsedPlan)).forEach(
+                (pattern, resolution) -> testAnalyzer.addIndex(pattern.indexPattern(), resolution)
             );
+            Analyzer analyzer = testAnalyzer.buildAnalyzer();
             List<Tuple<Stage, TestResult>> result = new ArrayList<>();
             var analyzed = analyzer.analyze(parsedPlan);
             if (stages.contains(Stage.ANALYSIS)) {
@@ -232,28 +272,57 @@ public abstract class GoldenTestCase extends ESTestCase {
             if (stages.equals(EnumSet.of(Stage.ANALYSIS))) {
                 return result;
             }
-            var optimizerContext = new LogicalOptimizerContext(EsqlTestUtils.TEST_CFG, FoldContext.small(), transportVersion);
+            var configuration = EsqlTestUtils.configuration(new QueryPragmas(Settings.EMPTY), esqlQuery, statement);
+            var optimizerContext = new LogicalOptimizerContext(configuration, FoldContext.small(), transportVersion);
             var logicallyOptimized = new LogicalPlanOptimizer(optimizerContext).optimize(analyzed);
             if (stages.contains(Stage.LOGICAL_OPTIMIZATION)) {
                 result.add(Tuple.tuple(Stage.LOGICAL_OPTIMIZATION, verifyOrWrite(logicallyOptimized, Stage.LOGICAL_OPTIMIZATION)));
             }
             if (stages.contains(Stage.PHYSICAL_OPTIMIZATION)
                 || stages.contains(Stage.LOCAL_PHYSICAL_OPTIMIZATION)
+                || stages.contains(Stage.LOOKUP_LOGICAL_OPTIMIZATION)
+                || stages.contains(Stage.LOOKUP_PHYSICAL_OPTIMIZATION)
                 || stages.contains(Stage.NODE_REDUCE)
                 || stages.contains(Stage.NODE_REDUCE_LOCAL_PHYSICAL_OPTIMIZATION)) {
-                var physicalPlanOptimizer = new PhysicalPlanOptimizer(
-                    new PhysicalOptimizerContext(EsqlTestUtils.TEST_CFG, transportVersion)
-                );
+                // When query approximation is enabled, the logical plan can contain
+                // `SampleProbabilityPlaceholder`s. After subplan execution, these are replaced
+                // by literal sample probabilities. This is required for physical plan
+                // optimization. Since subplan execution is not done in the golden tests,
+                // manually replace the placeholders instead by a fixed value.
+                logicallyOptimized = ApproximationPlan.substituteSampleProbability(logicallyOptimized, SAMPLE_PROBABILITY);
+                var physicalPlanOptimizer = new PhysicalPlanOptimizer(new PhysicalOptimizerContext(configuration, transportVersion));
                 PhysicalPlan physicalPlan = physicalPlanOptimizer.optimize(
                     new Mapper().map(new Versioned<>(logicallyOptimized, transportVersion))
                 );
                 if (stages.contains(Stage.PHYSICAL_OPTIMIZATION)) {
                     result.add(Tuple.tuple(Stage.PHYSICAL_OPTIMIZATION, verifyOrWrite(physicalPlan, Stage.PHYSICAL_OPTIMIZATION)));
                 }
-                Configuration conf = analyzer.context().configuration();
+                PhysicalPlan localPhysicalPlan = null;
+                boolean needsLocalPlan = stages.contains(Stage.LOCAL_PHYSICAL_OPTIMIZATION)
+                    || stages.contains(Stage.LOOKUP_LOGICAL_OPTIMIZATION)
+                    || stages.contains(Stage.LOOKUP_PHYSICAL_OPTIMIZATION);
+                if (needsLocalPlan) {
+                    localPhysicalPlan = localOptimize(physicalPlan, configuration);
+                }
                 if (stages.contains(Stage.LOCAL_PHYSICAL_OPTIMIZATION)) {
-                    TestResult localPhysicalResult = verifyOrWrite(localOptimize(physicalPlan, conf), Stage.LOCAL_PHYSICAL_OPTIMIZATION);
+                    TestResult localPhysicalResult = verifyOrWrite(localPhysicalPlan, Stage.LOCAL_PHYSICAL_OPTIMIZATION);
                     result.add(Tuple.tuple(Stage.LOCAL_PHYSICAL_OPTIMIZATION, localPhysicalResult));
+                }
+                if (stages.contains(Stage.LOOKUP_LOGICAL_OPTIMIZATION) || stages.contains(Stage.LOOKUP_PHYSICAL_OPTIMIZATION)) {
+                    List<LookupJoinExec> joins = findLookupJoins(localPhysicalPlan);
+                    for (int i = 0; i < joins.size(); i++) {
+                        String suffix = joins.size() > 1 ? "_" + i : "";
+                        LogicalPlan lookupLogical = buildLookupLogicalPlan(joins.get(i), configuration, searchStats);
+                        if (stages.contains(Stage.LOOKUP_LOGICAL_OPTIMIZATION)) {
+                            TestResult r = verifyOrWrite(lookupLogical, outputPath("lookup_logical_optimization" + suffix));
+                            result.add(Tuple.tuple(Stage.LOOKUP_LOGICAL_OPTIMIZATION, r));
+                        }
+                        if (stages.contains(Stage.LOOKUP_PHYSICAL_OPTIMIZATION)) {
+                            PhysicalPlan lookupPhysical = optimizeLookupPhysicalPlan(lookupLogical, configuration, searchStats);
+                            TestResult r = verifyOrWrite(lookupPhysical, outputPath("lookup_physical_optimization" + suffix));
+                            result.add(Tuple.tuple(Stage.LOOKUP_PHYSICAL_OPTIMIZATION, r));
+                        }
+                    }
                 }
                 if (stages.contains(Stage.NODE_REDUCE) || stages.contains(Stage.NODE_REDUCE_LOCAL_PHYSICAL_OPTIMIZATION)) {
                     ExchangeExec exec = EsqlTestUtils.singleValue(physicalPlan.collect(ExchangeExec.class));
@@ -261,8 +330,8 @@ public abstract class GoldenTestCase extends ESTestCase {
                     var reductionPlan = ComputeService.reductionPlan(
                         PlannerSettings.DEFAULTS,
                         new EsqlFlags(false),
-                        conf,
-                        conf.newFoldContext(),
+                        configuration,
+                        configuration.newFoldContext(),
                         sink,
                         true,
                         true,
@@ -289,7 +358,7 @@ public abstract class GoldenTestCase extends ESTestCase {
                                     Tuple.tuple(
                                         Stage.NODE_REDUCE_LOCAL_PHYSICAL_OPTIMIZATION,
                                         verifyOrWrite(
-                                            localOptimize(reductionPlan.dataNodePlan(), conf),
+                                            localOptimize(reductionPlan.dataNodePlan(), configuration),
                                             outputPath(dualFileOutput.dataNodeOutput())
                                         )
                                     )
@@ -297,8 +366,8 @@ public abstract class GoldenTestCase extends ESTestCase {
                             }
                             case ENABLED -> {
                                 var finalizedResult = new ReductionPlan(
-                                    (ExchangeSinkExec) localOptimize(reductionPlan.nodeReducePlan(), conf),
-                                    (ExchangeSinkExec) localOptimize(reductionPlan.dataNodePlan(), conf),
+                                    (ExchangeSinkExec) localOptimize(reductionPlan.nodeReducePlan(), configuration),
+                                    (ExchangeSinkExec) localOptimize(reductionPlan.dataNodePlan(), configuration),
                                     reductionPlan.localPhysicalOptimization()
                                 );
                                 result.addAll(
@@ -389,6 +458,44 @@ public abstract class GoldenTestCase extends ESTestCase {
                 new PlanTimeProfile()
             );
         }
+
+        private static List<LookupJoinExec> findLookupJoins(PhysicalPlan plan) {
+            List<LookupJoinExec> joins = new ArrayList<>();
+            plan.forEachDown(p -> {
+                if (p instanceof LookupJoinExec join) {
+                    joins.add(join);
+                }
+            });
+            return joins;
+        }
+
+        private static LogicalPlan buildLookupLogicalPlan(LookupJoinExec join, Configuration conf, SearchStats stats) {
+            List<MatchConfig> matchFields = new ArrayList<>(join.leftFields().size());
+            for (int i = 0; i < join.leftFields().size(); i++) {
+                FieldAttribute right = (FieldAttribute) join.rightFields().get(i);
+                String fieldName = right.exactAttribute().fieldName().string();
+                if (join.isOnJoinExpression()) {
+                    fieldName = join.leftFields().get(i).name();
+                }
+                matchFields.add(new MatchConfig(fieldName, i, join.leftFields().get(i).dataType()));
+            }
+            LogicalPlan logicalPlan = LookupFromIndexService.buildLocalLogicalPlan(
+                join.source(),
+                matchFields,
+                join.joinOnConditions(),
+                join.right(),
+                join.addedFields().stream().map(f -> (NamedExpression) f).toList()
+            );
+            FoldContext foldCtx = conf.newFoldContext();
+            return new LookupLogicalOptimizer(new LocalLogicalOptimizerContext(conf, foldCtx, stats)).localOptimize(logicalPlan);
+        }
+
+        private static PhysicalPlan optimizeLookupPhysicalPlan(LogicalPlan logicalPlan, Configuration conf, SearchStats stats) {
+            FoldContext foldCtx = conf.newFoldContext();
+            PhysicalPlan physicalPlan = LocalMapper.INSTANCE.map(logicalPlan);
+            var context = new LocalPhysicalOptimizerContext(PlannerSettings.DEFAULTS, new EsqlFlags(true), conf, foldCtx, stats);
+            return new LookupPhysicalPlanOptimizer(context).optimize(physicalPlan);
+        }
     }
 
     private static Test.TestResult createNewOutput(Path output, QueryPlan<?> plan) throws IOException {
@@ -396,8 +503,21 @@ public abstract class GoldenTestCase extends ESTestCase {
             throw new IllegalStateException("Extra output files should not be created automatically:" + output);
         }
         String full = plan.toString(Node.NodeStringFormat.FULL);
-        Files.writeString(output, normalizeNameIds(normalizeSyntheticNames(full)), StandardCharsets.UTF_8);
+        Files.writeString(output, normalizeString(full), StandardCharsets.UTF_8);
         return Test.TestResult.CREATED;
+    }
+
+    // Visible for testing.
+    static String normalizeString(String input) {
+        return normalizeRandomSeeds(normalizeNameIds(normalizeSyntheticNames(input)));
+    }
+
+    /**
+     * Rewrites seeds of random sampling queries to a fixed seed of 42.
+     * The seed generated during plan building can vary between runs, so this is needed to keep golden output deterministic.
+     */
+    private static String normalizeRandomSeeds(String line) {
+        return line.replaceAll("(\"seed\"\\s*:\\s*)(-?\\d+)", "$142");
     }
 
     /**
@@ -413,13 +533,39 @@ public abstract class GoldenTestCase extends ESTestCase {
 
     /**
      * Normalizes synthetic attribute names of the form $$something($something)* that are followed by # (node id).
-     * Replaces them with $$firstSegment$runningInt so golden output is stable across runs.
+     * Digit-only segments (generated at run time) are replaced with a stable running integer; text segments are kept as-is.
+     * Digits may appear anywhere in the name, including in the middle (e.g. {@code $$SUM$field$0$sum}).
      */
     private static String normalizeSyntheticNames(String full) {
         return replaceMatches(full, SYNTHETIC_PATTERN, (matcher, idMap) -> {
-            String firstSegment = matcher.group(1);
-            return "$$" + firstSegment + "$" + idMap.getId(firstSegment);
+            StringBuilder result = new StringBuilder("$$");
+            StringBuilder numericSegments = new StringBuilder();
+            boolean hasNormalized = false;
+            for (String seg : matcher.group(1).split("\\$")) {
+                if (NUMERIC_SEGMENT_PATTERN.matcher(seg).matches()) {
+                    appendSegment(numericSegments, seg);
+                } else {
+                    if (numericSegments.isEmpty() == false) {
+                        appendSegment(result, idMap.getId(numericSegments.toString()));
+                        numericSegments.setLength(0);
+                        hasNormalized = true;
+                    }
+                    appendSegment(result, seg);
+                }
+            }
+            if (numericSegments.isEmpty() == false) {
+                appendSegment(result, idMap.getId(numericSegments.toString()));
+                hasNormalized = true;
+            }
+            return hasNormalized ? result.toString() : matcher.group();
         });
+    }
+
+    private static StringBuilder appendSegment(StringBuilder sb, Object o) {
+        if (sb.isEmpty() || sb.charAt(sb.length() - 1) != '$') {
+            sb.append('$');
+        }
+        return sb.append(o);
     }
 
     private static <K> String replaceMatches(String input, Pattern pattern, BiFunction<Matcher, IdMap<K>, String> replacer) {
@@ -436,10 +582,15 @@ public abstract class GoldenTestCase extends ESTestCase {
         return sb.toString();
     }
 
-    // Matches synthetic names like $$alias$1$2#3, since those $digits are generated during the test run and may differ each time. The
-    // #digit are removed by the next pattern.
-    private static final Pattern SYNTHETIC_PATTERN = Pattern.compile("\\$\\$([^$\\s]+)(\\$\\d+)+(?=[{#])");
+    /**
+     * Matches synthetic names like {@code $$alias$1$2#3}, {@code $$last_name$LENGTH$241149320{f$}#6}, or
+     * {@code $$SUM$field$0$sum#7}. Digit-only segments are generated during the test run and may differ
+     * each time; text segments are kept. The {@code #digit} suffixes are normalized by
+     * {@link #IDENTIFIER_PATTERN}.
+     */
+    private static final Pattern SYNTHETIC_PATTERN = Pattern.compile("\\$\\$([^$\\s{#]+(?:\\$[^$\\s{#]+)*)(?=[{#])");
     private static final Pattern IDENTIFIER_PATTERN = Pattern.compile("#\\d+");
+    private static final Pattern NUMERIC_SEGMENT_PATTERN = Pattern.compile("-?\\d+");
 
     private static class IdMap<K> {
         private final Map<K, Integer> map = new HashMap<>();
@@ -452,8 +603,9 @@ public abstract class GoldenTestCase extends ESTestCase {
 
     private static Test.TestResult verifyExisting(Path output, QueryPlan<?> plan) throws IOException {
         String full = plan.toString(Node.NodeStringFormat.FULL);
-        String testString = normalize(normalizeNameIds(normalizeSyntheticNames(full)));
-        if (testString.equals(normalize(Files.readString(output)))) {
+        String actualString = normalize(normalizeString(full));
+        String expectedString = normalize(Files.readString(output));
+        if (actualString.equals(expectedString)) {
             if (System.getProperty("golden.cleanactual") != null) {
                 Path path = actualPath(output);
                 if (Files.exists(path)) {
@@ -467,11 +619,12 @@ public abstract class GoldenTestCase extends ESTestCase {
         if (System.getProperty("golden.noactual") != null) {
             logger.debug("Skipping actual file creation because golden.noactual property is set");
         } else {
-            List<String> actualLines = testString.lines().map(GoldenTestCase::normalize).toList();
             Path actualPath = actualPath(output);
             logger.info("Creating actual file at " + actualPath.toAbsolutePath());
-            Files.write(actualPath, actualLines);
+            Files.writeString(actualPath, normalizeString(full), StandardCharsets.UTF_8);
         }
+
+        logger.info("Test failure:\n[Actual]\n{}\n[Expected]\n{}\n", actualString, expectedString);
         return Test.TestResult.FAILURE;
     }
 
@@ -503,6 +656,16 @@ public abstract class GoldenTestCase extends ESTestCase {
          */
         LOCAL_PHYSICAL_OPTIMIZATION(new SingleFileOutput("local_physical_optimization")),
         /**
+         * Lookup-node logical optimization: builds a logical plan from each {@link LookupJoinExec} and runs
+         * {@link LookupLogicalOptimizer}. When a query contains multiple LOOKUP JOINs, each produces a separate output file.
+         */
+        LOOKUP_LOGICAL_OPTIMIZATION(new SingleFileOutput("lookup_logical_optimization")),
+        /**
+         * Lookup-node physical optimization: runs {@link LookupPhysicalPlanOptimizer} on each lookup plan.
+         * When a query contains multiple LOOKUP JOINs, each produces a separate output file.
+         */
+        LOOKUP_PHYSICAL_OPTIMIZATION(new SingleFileOutput("lookup_physical_optimization")),
+        /**
          * See {@link ComputeService#reductionPlan}. Actually results in <b>two</b> plans: one for the node reduce driver and one for the
          * data nodes.
          */
@@ -531,10 +694,6 @@ public abstract class GoldenTestCase extends ESTestCase {
 
     private static String normalize(String s) {
         return s.lines().map(String::strip).collect(Collectors.joining("\n"));
-    }
-
-    private String extractTestName() {
-        return getTestName();
     }
 
     /**
@@ -580,6 +739,176 @@ public abstract class GoldenTestCase extends ESTestCase {
         @SuppressForbidden(reason = "printing repro info")
         private static void printToErr(String s) {
             System.err.println(s);
+        }
+    }
+
+    private static Map<IndexPattern, CsvTestsDataLoader.MultiIndexTestDataset> testDatasets(LogicalPlan parsed) {
+        var preAnalysis = new PreAnalyzer().preAnalyze(parsed);
+        if (preAnalysis.indexes().isEmpty()) {
+            // If the data set doesn't matter we'll just grab one we know works. Employees is fine.
+            return Map.of(
+                new IndexPattern(Source.EMPTY, "employees"),
+                CsvTestsDataLoader.MultiIndexTestDataset.of(CSV_DATASET.get("employees"))
+            );
+        }
+
+        List<String> missing = new ArrayList<>();
+        Map<IndexPattern, CsvTestsDataLoader.MultiIndexTestDataset> all = new HashMap<>();
+        for (IndexPattern indexPattern : preAnalysis.indexes().keySet()) {
+            List<CsvTestsDataLoader.TestDataset> datasets = new ArrayList<>();
+            String indexName = indexPattern.indexPattern();
+            if (indexName.endsWith("*")) {
+                String indexPrefix = indexName.substring(0, indexName.length() - 1);
+                for (var entry : CSV_DATASET.entrySet()) {
+                    if (entry.getKey().startsWith(indexPrefix)) {
+                        datasets.add(entry.getValue());
+                    }
+                }
+            } else {
+                for (String index : indexName.split(",")) {
+                    var dataset = CSV_DATASET.get(index);
+                    if (dataset == null) {
+                        throw new IllegalArgumentException("unknown CSV dataset for table [" + index + "]");
+                    }
+                    datasets.add(dataset);
+                }
+            }
+            if (datasets.isEmpty() == false) {
+                all.put(indexPattern, new CsvTestsDataLoader.MultiIndexTestDataset(indexName, datasets));
+            } else {
+                missing.add(indexName);
+            }
+        }
+        if (all.isEmpty()) {
+            throw new IllegalArgumentException("Found no CSV datasets for table [" + preAnalysis.indexes() + "]");
+        }
+        if (missing.isEmpty() == false) {
+            throw new IllegalArgumentException("Did not find datasets for tables: " + missing);
+        }
+        return all;
+    }
+
+    public static Map<IndexPattern, IndexResolution> loadIndexResolution(
+        Map<IndexPattern, CsvTestsDataLoader.MultiIndexTestDataset> datasets
+    ) {
+        Map<IndexPattern, IndexResolution> indexResolutions = new HashMap<>();
+        for (var entry : datasets.entrySet()) {
+            indexResolutions.put(entry.getKey(), loadIndexResolution(entry.getValue()));
+        }
+        return indexResolutions;
+    }
+
+    public static IndexResolution loadIndexResolution(CsvTestsDataLoader.MultiIndexTestDataset datasets) {
+        var indexNames = datasets.datasets().stream().map(CsvTestsDataLoader.TestDataset::indexName);
+        Map<String, IndexMode> indexModes = indexNames.collect(Collectors.toMap(x -> x, x -> IndexMode.STANDARD));
+        List<MappingPerIndex> mappings = datasets.datasets()
+            .stream()
+            .map(ds -> new MappingPerIndex(ds.indexName(), createMappingForIndex(ds)))
+            .toList();
+        var mergedMappings = mergeMappings(mappings);
+        return IndexResolution.valid(
+            new EsIndex(
+                datasets.indexPattern(),
+                mergedMappings.mapping,
+                indexModes,
+                Map.of(),
+                Map.of(),
+                mergedMappings.fieldToUnmappedIndices
+            )
+        );
+    }
+
+    // TODO should de-duplicate, strong overlap with CsvTestsDataLoader#readMappingFile
+    private static Map<String, EsField> createMappingForIndex(CsvTestsDataLoader.TestDataset dataset) {
+        var mapping = new TreeMap<>(LoadMapping.loadMapping(dataset.streamMapping()));
+        if (dataset.typeMapping() != null) {
+            for (var entry : dataset.typeMapping().entrySet()) {
+                String key = entry.getKey();
+                String[] segments = key.split("\\.");
+                // Navigate to the parent map containing the leaf field.
+                Map<String, EsField> targetMap = mapping;
+                for (int i = 0; i < segments.length - 1 && targetMap != null; i++) {
+                    EsField parent = targetMap.get(segments[i]);
+                    targetMap = parent != null ? parent.getProperties() : null;
+                }
+                String leafName = segments[segments.length - 1];
+                if (targetMap == null) {
+                    continue;
+                }
+
+                if (entry.getValue() == null) {
+                    targetMap.remove(leafName);
+                    continue;
+                }
+                if (targetMap.containsKey(leafName)) {
+                    DataType dataType = DataType.fromTypeName(entry.getValue());
+                    EsField field = targetMap.get(leafName);
+                    EsField editedField = new EsField(
+                        field.getName(),
+                        dataType,
+                        field.getProperties(),
+                        field.isAggregatable(),
+                        field.getTimeSeriesFieldType()
+                    );
+                    targetMap.put(leafName, editedField);
+                }
+            }
+        }
+        // Add dynamic mappings, but only if they are not already mapped
+        if (dataset.dynamicTypeMapping() != null) {
+            for (var entry : dataset.dynamicTypeMapping().entrySet()) {
+                if (mapping.containsKey(entry.getKey()) == false) {
+                    DataType dataType = DataType.fromTypeName(entry.getValue());
+                    EsField editedField = new EsField(entry.getKey(), dataType, Map.of(), false, EsField.TimeSeriesFieldType.NONE);
+                    mapping.put(entry.getKey(), editedField);
+                }
+            }
+        }
+        return mapping;
+    }
+
+    record MappingPerIndex(String index, Map<String, EsField> mapping) {}
+
+    record MergedResult(Map<String, EsField> mapping, Map<String, Set<String>> fieldToUnmappedIndices) {}
+
+    private static MergedResult mergeMappings(List<MappingPerIndex> mappingsPerIndex) {
+        int numberOfIndices = mappingsPerIndex.size();
+        Set<String> allIndices = mappingsPerIndex.stream().map(MappingPerIndex::index).collect(toSet());
+        Map<String, Map<String, EsField>> columnNamesToFieldByIndices = new HashMap<>();
+        for (var mappingPerIndex : mappingsPerIndex) {
+            for (var entry : mappingPerIndex.mapping().entrySet()) {
+                String columnName = entry.getKey();
+                EsField field = entry.getValue();
+                columnNamesToFieldByIndices.computeIfAbsent(columnName, k -> new HashMap<>()).put(mappingPerIndex.index(), field);
+            }
+        }
+
+        Map<String, Set<String>> fieldToUnmappedIndices = new HashMap<>();
+        for (var e : columnNamesToFieldByIndices.entrySet()) {
+            if (e.getValue().size() < numberOfIndices) {
+                Set<String> unmappedIndices = allIndices.stream().filter(i -> e.getValue().containsKey(i) == false).collect(toSet());
+                if (unmappedIndices.isEmpty() == false) {
+                    fieldToUnmappedIndices.put(e.getKey(), unmappedIndices);
+                }
+            }
+        }
+        var mappings = columnNamesToFieldByIndices.entrySet()
+            .stream()
+            .collect(Collectors.toMap(Map.Entry::getKey, e -> mergeFields(e.getKey(), e.getValue())));
+        return new MergedResult(mappings, fieldToUnmappedIndices);
+    }
+
+    private static EsField mergeFields(String index, Map<String, EsField> columnNameToField) {
+        var indexFields = columnNameToField.values();
+        if (indexFields.stream().distinct().count() > 1) {
+            var typesToIndices = new HashMap<String, Set<String>>();
+            for (var typeToIndex : columnNameToField.entrySet()) {
+                typesToIndices.computeIfAbsent(typeToIndex.getValue().getDataType().typeName(), k -> new HashSet<>())
+                    .add(typeToIndex.getKey());
+            }
+            return new InvalidMappedField(index, typesToIndices);
+        } else {
+            return indexFields.iterator().next();
         }
     }
 }
